set incident on flowNode